Add Powerbat library and make a sample API endpoint from it
Add Powerbat library and make a sample API endpoint from it
